Remove null pointer exceptions